@@ -230,6 +230,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - pulsemanager.cpp: typo fix in variable name server_working_dir_.
     - pulsemanager.{cpp,h}: find_port () actually returns a value, fix
       declaration accordingly.
+    - pulsemanager.cpp: fix compile errors in find_port () by renaming the ret
+      or port variable to search_port.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
